--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  /*background-image: linear-gradient(to top, #df89b5 0%, #bfd9fe 100%);*/
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+  margin-bottom: 400px;
+}
+
 .container {
   background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
   border-radius: 10px;
