--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a {
 
 #current-day,
 #current-time {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 #temp-change {
@@ -91,8 +91,13 @@ a {
 }
 
 .day-and-time {
-  font-size: 14px;
-  padding-top: 20px;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  bottom: 5px;
+  left: 3px;
+  text-align: left;
 }
 
 h1,
