--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@ a:hover {
   color: #73008f;
 }
 
+img {
+  position: relative;
+  top: 25px;
+  left: 15px;
+}
+
 .temperature {
   font-size: 44px;
 }
@@ -72,7 +78,7 @@ a:hover {
 
 #current-day,
 #current-time {
-  font-size: 13px;
+  font-size: 12px;
 }
 
 #temp-change {
@@ -94,12 +100,13 @@ a:hover {
 }
 
 .day-and-time {
-  font-size: 13px;
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 12px;
   margin: 0;
   padding: 0;
   position: relative;
-  bottom: 5px;
-  left: 3px;
+  bottom: 10px;
+  left: 5px;
   text-align: left;
 }
 
